--- a/mystyle.css
+++ b/mystyle.css
@@ -41,6 +41,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1{
     font-size:30px;
+    text-align: center
 }
 
 h2{
@@ -198,7 +199,7 @@ h2{
     z-index: 1; /* Ensure the gradient is on top of the image */
 }
 .geode{
-    transform: scale(0.9);
+    transform: scale(0.8);
 }
 .center {
     position: relative;
@@ -214,6 +215,7 @@ h2{
     position: relative;
     width: 90vh;
     height: 85vh; /* Adjust as needed */
+    clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
     background-image: url('canyon_border.png');
     background-size: contain;
     background-position: center center;
