--- a/style2.css
+++ b/style2.css
@@ -40,11 +40,23 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
     font-size: 30px;
+    text-align: right;
+    z-index: 5;
+    position: absolute;
+    top: 15%; /* Adjust vertical position within the clipped area */
+    left: 50%; /* Adjust horizontal position within the clipped area */
+    width: 40%; /* Adjust width as needed */
+    padding-right: 20px;
+    font-style: italic;
+    box-sizing: content-box;
+    background-color: #FFE050;
+
 }
 
 h2 {
     color: var(--accent-blue);
     font-size: 25px;
+    font-style: italic;
 }
 
 /* General navbar styling */
@@ -187,11 +199,12 @@ h2 {
     position: relative;
     width: 100%;
     height: 85vh; /* Adjust as needed */
-    background-image: url('Landing_Page.png');
+    background-image: url('Landing_Page_2.jpg');
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
-}
+    clip-path:polygon(0 0, 0% 100%, 100% 100%);
+} 
 
 .image_container::before {
     content: '';
@@ -216,7 +229,7 @@ h2 {
     margin-left: auto;
     margin-right: auto;
     max-width: 80%; /* Adjust to control the width of the centered element */
-    z-index: 2; /* Ensure the centered content is on top of the gradient */
+    z-index: 3; /* Ensure the centered content is on top of the gradient */
 }
 
 .border_container {
