--- a/mystyle.css
+++ b/mystyle.css
@@ -311,13 +311,40 @@ h2{
 .tech-button:hover {
     background-color: var(--name); /* Darker blue on hover */
 }
-/*.flex-box > * {
-    width: 100%; /* Ensure items take full width of their grid cell */
 
 
-/** {
-    box-sizing: border-box;
-}*/
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px; /* Space between polaroid items */
+  }
+
+  /* Polaroid styling for each photo container */
+  .polaroid {
+    background: whitesmoke;
+    padding: 10px;
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: 180px;
+    text-align: center;
+    border-radius: 5px;
+    margin-bottom: 20px; /* Space below each polaroid */
+  }
+
+  /* Image within the Polaroid */
+  .polaroid img {
+    width: 100%;
+    height: 80%;
+    display: block;
+  }
+
+  /* Caption under the image */
+  .caption {
+    font-family: 'Courier New', Courier, monospace;
+    color: #333;
+    font-size: 14px;
+    margin-top: 10px;
+  }
 
 main {
     padding: 2rem;
